--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <label for="localisation"><i class="fas fa-map-marker-alt"></i></label>
             <input type="text" name="localisation" id="localisation" placeholder="Paris, Belleville"/>
         </div>
-        <div id="exploration">
+        <div class="exploration">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeption, séléctionnés par nos soins.</p>
-            <div class="btn">Explorez nos restaurants</div>
+            <div class="exploration__btn">Explorez nos restaurants</div>
         </div>
         <nav>
             <h2>Fonctionnement</h2>
@@ -60,7 +60,7 @@
             <div class="restaurants">
                 <a href="#">
                     <div class="restaurants__block">
-                        <div class="restaurants__block__images">
+                        <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image restaurant jay wennington">
                             <p>Nouveau</p>
                         </div>
                         <div class="restaurants__block__details">
@@ -75,7 +75,8 @@
                 </a>
                 <a href="#">
                     <div class="restaurants__block">
-                        <div class="restaurants__block__images restaurants__block__images--img2">
+                        <div class="restaurants__block__images restaurants__block__images--position">
+                            <img src="Maquettes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image restaurant stil">
                             <p>Nouveau</p>
                         </div>
                         <div class="restaurants__block__details">
@@ -90,7 +91,7 @@
                 </a>
                 <a href="#">
                     <div class="restaurants__block">
-                        <div class="restaurants__block__images restaurants__block__images--img3">
+                        <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image restaurant toa heftiba">
                         </div>
                         <div class="restaurants__block__details">
                             <div class="restaurants__block__details__names">
@@ -104,7 +105,7 @@
                 </a>
                 <a href="#">
                     <div class="restaurants__block">
-                        <div class="restaurants__block__images restaurants__block__images--img4">
+                        <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image restaurant louis hansel">
                         </div>
                         <div class="restaurants__block__details">
                             <div class="restaurants__block__details__names">
