--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="page1.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image restaurant toa heftiba">
                         </div>
