--- a/page1.html
+++ b/page1.html
@@ -148,8 +148,8 @@
                     <div class="menu__blocks__choix__check"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
-            <div class="menu__blocks__btn">Commander
-            </div>
+        </div>
+        <div class="btn">Commander
         </div>
     </main>
     <footer>
