--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,7 @@
     <header>
         <div id="block-logo">
             <div class="arrow">
-                <a href="#"><i class="fas fa-arrow-left"></i></a>
+                <a href="index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
            <img src="Maquettes-Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo">
        </div>
@@ -149,7 +149,9 @@
                 </div>
             </div>
         </div>
-        <div class="btn">Commander
+        <div class="container">
+            <div class="container__btn">Commander
+            </div>
         </div>
     </main>
     <footer>
