--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section>
             <h2>Restaurants</h2>
             <div class="restaurants">
-                <a href="#">
+                <a href="La_palette_du_goût.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image restaurant jay wennington">
                             <p>Nouveau</p>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="La_note_enchantée.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images restaurants__block__images--position">
                             <img src="Maquettes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image restaurant stil">
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="page1.html">
+                <a href="À_la_française.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image restaurant toa heftiba">
                         </div>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="Le_délice_des_sens.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image restaurant louis hansel">
                         </div>
