--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="loader">
+    </div>
      <header>
         <div id="block-logo">
             <img src="Maquettes-Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo">
@@ -58,7 +60,7 @@
         <section>
             <h2>Restaurants</h2>
             <div class="restaurants">
-                <a href="La_palette_du_goût.html">
+                <a href="la_palette_du_gout.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image restaurant jay wennington">
                             <p>Nouveau</p>
@@ -73,7 +75,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="La_note_enchantée.html">
+                <a href="la_note_enchantee.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images restaurants__block__images--position">
                             <img src="Maquettes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image restaurant stil">
@@ -89,7 +91,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="À_la_française.html">
+                <a href="a_la_francaise.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image restaurant toa heftiba">
                         </div>
@@ -103,7 +105,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="Le_délice_des_sens.html">
+                <a href="le_delice_des_sens.html">
                     <div class="restaurants__block">
                         <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image restaurant louis hansel">
                         </div>
