--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="loader">
     </div>
      <header>
-        <div id="block-logo">
+        <div class="block-logo">
             <img src="Maquettes-Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo">
         </div>
      </header>
@@ -34,7 +34,8 @@
                 <li class="fonctionnement-blocks">
                     <div class="fonctionnement-blocks__numbers">1
                     </div>
-                    <div class="fonctionnement-blocks__icones"><i class="fas fa-mobile-alt"></i>
+                    <div class="fonctionnement-blocks__icones">
+                        <i class="fas fa-mobile-alt"></i>
                     </div>
                     <div class="fonctionnement-blocks__titles">Choisissez un restaurant
                     </div>
@@ -42,7 +43,8 @@
                 <li class="fonctionnement-blocks">
                     <div class="fonctionnement-blocks__numbers">2
                     </div>
-                    <div class="fonctionnement-blocks__icones"><i class="fas fa-list-ul"></i>
+                    <div class="fonctionnement-blocks__icones">
+                        <i class="fas fa-list-ul"></i>
                     </div>
                     <div class="fonctionnement-blocks__titles">Composez votre menu
                     </div>
@@ -50,7 +52,8 @@
                 <li class="fonctionnement-blocks">
                     <div class="fonctionnement-blocks__numbers">3
                     </div>
-                    <div class="fonctionnement-blocks__icones"><i class="fas fa-store"></i>
+                    <div class="fonctionnement-blocks__icones">
+                        <i class="fas fa-store"></i>
                     </div>
                     <div class="fonctionnement-blocks__titles">Dégustez au restaurant
                     </div>
@@ -62,7 +65,8 @@
             <div class="restaurants">
                 <a href="la_palette_du_gout.html">
                     <div class="restaurants__block">
-                        <div class="restaurants__block__images"><img src="Maquettes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image restaurant jay wennington">
+                        <div class="restaurants__block__images">
+                            <img src="Maquettes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image restaurant jay wennington">
                             <p>Nouveau</p>
                         </div>
                         <div class="restaurants__block__details">
@@ -70,7 +74,9 @@
                                 <h3>La palette du goût</h3>
                                 <h4>Ménilmontant</h4>
                             </div>
-                            <div class="restaurants__block__details__icones"><i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                            <div class="restaurants__block__details__icones">
+                                <i class="fas fa-heart"></i>
+                                <i class="far fa-heart"></i>
                             </div>
                         </div>
                     </div>
@@ -86,7 +92,9 @@
                                 <h3>La note enchantée</h3>
                                 <h4>Charonne</h4>
                             </div>
-                            <div class="restaurants__block__details__icones"><i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                            <div class="restaurants__block__details__icones">
+                                <i class="fas fa-heart"></i>
+                                <i class="far fa-heart"></i>
                             </div>
                         </div>
                     </div>
@@ -100,7 +108,9 @@
                                 <h3>À la française</h3>
                                 <h4>Cité Rouge</h4>
                             </div>
-                            <div class="restaurants__block__details__icones"><i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                            <div class="restaurants__block__details__icones">
+                                <i class="fas fa-heart"></i>
+                                <i class="far fa-heart"></i>
                             </div>
                         </div>
                     </div>
@@ -114,7 +124,9 @@
                                 <h3>Le délice des sens</h3>
                                 <h4>Folie-Méricourt</h4>
                             </div>
-                            <div class="restaurants__block__details__icones"><i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                            <div class="restaurants__block__details__icones">
+                                <i class="fas fa-heart"></i>
+                                <i class="far fa-heart"></i>
                             </div>
                         </div>
                     </div>
