--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <div id="block-logo">
-            <div class="arrow">
+        <div class="block-logo">
+            <div class="block-logo__arrow">
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
            <img src="Maquettes-Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo">
@@ -28,14 +28,17 @@
                 <h1>
                     À la francaise
                 </h1>
-                <div class="menu__title__icone"><i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                <div class="menu__title__icone">
+                    <i class="fas fa-heart"></i>
+                    <i class="far fa-heart"></i>
                 </div>
             </div>
             <div class="menu__blocks">
                 <h3>
                     ENTRÉES
                 </h3>
-                <div class="green_line"></div>
+                <div class="green_line">
+                </div>
                 <div class="menu__blocks__liste">
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -46,7 +49,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">25€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -57,7 +62,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">35€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -68,7 +75,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">20€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -87,7 +96,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">40€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -98,7 +109,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">35€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -109,7 +122,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">34€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -128,7 +143,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">18€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -139,7 +156,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">22€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -150,7 +169,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">23€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
