--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <div id="block-logo">
-            <div class="arrow">
+        <div class="block-logo">
+            <div class="block-logo__arrow">
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
            <img src="Maquettes-Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo">
@@ -28,7 +28,9 @@
                 <h1>
                     La note enchantée
                 </h1>
-                <div class="menu__title__icone"><i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                <div class="menu__title__icone">
+                    <i class="fas fa-heart"></i>
+                    <i class="far fa-heart"></i>
                 </div>
             </div>
             <div class="menu__blocks">
@@ -46,7 +48,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">25€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -57,7 +61,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">35€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -68,7 +74,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">20€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -79,7 +87,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">35€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -98,7 +108,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">40€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -109,7 +121,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">35€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -120,7 +134,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">44€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,7 +155,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">22€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -150,7 +168,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">23€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                     <div class="menu__blocks__liste__choix">
                         <div class="menu__blocks__liste__choix__détails">
@@ -161,7 +181,9 @@
                             <div class="menu__blocks__liste__choix__détails__prix">18€
                             </div>
                         </div>
-                        <div class="menu__blocks__liste__choix__check"><i class="fas fa-check-circle"></i></div>
+                        <div class="menu__blocks__liste__choix__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
